--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,117 +1,130 @@
 <!DOCTYPE html>
-<html>
+  <html>
+    <head>
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.css">
+      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+      <style>
+      #main{
+        margin-top:10px;
+        height:100% !important;
+        padding:0;
 
-<head>
+      }
+      #inner{
+        height:330px;
+      }
+      .main-input{
+        margin-top:20px;
+      }
+      .page-footer{
+        /* margin-top:-40px; */
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style>
-    #main{
-      margin-top:0px;
-      height:100% !important
+      }
+      .container{
 
-    }
-    #inner{
-      height:330px;
-    }
-    .main-input{
-      margin-top:70px;
-    }
-    .page-footer{
-      margin-top:-40px;
+        width:95% !important
 
-    }
-    .container{
+      }
+      .message{
+        margin: 20px 10px;
+        width: 100%;
+        /* padding: 10px; */
+      }
+      .button{
+        float: right;
+      }
+      @media screen and (max-width: 770px) {
 
-  width:95% !important
+        .button{
+          float: none;
+        }
+        .page-footer{
+          /* text-align: center; */
+        }
+        }
+      </style>
+    </head>
 
-    }
+    <body>
 
-    </style>
-</head>
-
-<body>
-
-    <nav>
-        <div class="nav-wrapper ">
-            <a href="#!" class=" center brand-logo margin-4">UrlShortner</a>
-        </div>
-    </nav>
+        <nav>
+            <div class="nav-wrapper ">
+                <a href="#!" class=" center brand-logo margin-4">UrlShortner</a>
+            </div>
+        </nav>
 
 
-    <!-- Page Layout here -->
-<div class="container">
+        <div class="container">
 
-  <!-- Form with validation -->
-                <div id="main" class="col s12 m12 l6">
-                  <div id="inner" class="card-panel white darken-3">
-                    <h4 class="header2">Enter the url to Sort</h4>
-                    <div class="row main-input">
-                      <form action="/shorten" method="POST" class="col s12">
-                        <div class="row">
-                          <div class="input-field col s12">
-                            <i class="fa fa-link prefix" aria-hidden="true"></i>
-                            <input id="name" name="url" type="text" class="validate">
-                            <label for="url">Enter the url to shorten...</label>
-                          </div>
-                        </div>
-
-                    <div class="row center">
-                            <div class="center input-field col s12 " style="margin-top:0px;">
-                              <button class="center btn cyan waves-effect waves-light right" type="submit" name="action">Shorten
-                                <i class="mdi-content-send right"></i>
-                                <i class="fa fa-arrow-right riht" aria-hidden="true"></i>
-                              </button>
-                            </div>
-                            <div class="card-alert alert">
-                              <h4 red><%= message %></h4>
-                            </div>
-                          </div>
-                      </form>
-
+          <div id="main" >
+            <div id="inner" class="card-panel white darken-3">
+              <h4 class="header2">Enter the url to Short</h4>
+              <div class="row main-input">
+                <form action="/shorten" method="POST" class="col s12">
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <i class="fa fa-link prefix" aria-hidden="true"></i>
+                      <input id="name" name="url" type="text" class="validate">
+                      <label for="url">Enter the url to shorten...</label>
                     </div>
-
                   </div>
-                </div>
 
-                <!-- Adding footer content  !-->
-                <footer class="page-footer">
-                       <div class="container">
-                         <div class="row">
-                           <div class="col l6 s12">
-                             <h5 class="white-text">Url Shortener</h5>
-                             <p class="grey-text text-lighten-4">You can Short your long url with the help of this Url Shortner.</p>
-                             <p>Please share it  in your friend circle</p>
-
-                             <br>
-                             <p>© 2017-18, All Rights Reserved  <a class="grey-text text-lighten-3" href="https://www.ashutoshdwivedi.in/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i>  www.ashutoshdwivedi.in</a></p>
-                           </div>
-                           <div class="col l4 offset-l2 s12">
-                             <h4>Developed by Ashutosh</h4>
-                             <h5 class="white-text"> Meet me here</h5>
-                             <ul>
-                               <li><a class="grey-text text-lighten-3" href="https://www.ashutoshdwivedi.in" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i>My website</a>
-                               </li>
-                               <li>
-                               <a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/ashutosh1001/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i>   Linkedin</a>
-                           </li>
-                           <li><a class="grey-text text-lighten-3" href="https://github.com/kindacoder" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i> Github</a>
-                           </li>
-
-
-                           <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/ashutosh.dwivedid" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i>  Facebook</a>
-                           </li>
-
-                             </ul>
-                           </div>
-                         </div>
-                       </div>
-
-                     </footer>
-
+              <div class="row center">
+                      <div class="center input-field col s12 " style="margin-top:0px;">
+                        <button class="btn cyan waves-effect waves-light button" type="submit" name="action">Shorten
+                          <i class="mdi-content-send "></i>
+                          <i class="fa fa-arrow-right " aria-hidden="true"></i>
+                        </button>
+                      </div>
+                      <div class="alert alert-danger message">
+                        <strong><%= message %></strong>
+                      </div>
+                    </div>
+                </form>
 
               </div>
+
+                </div>
+              </div>
+    <!-- Adding footer content  !-->
+    <footer class="page-footer">
+           <div class="container">
+             <div class="row">
+               <div class="col-md-6 col-xs-12 col-sm-12 ">
+                 <h5 class="white-text">Url Shortener</h5>
+                 <p class="grey-text text-lighten-4">You can Short your long url with the help of this Url Shortner.</p>
+                 <p>Please share it  in your friend circle</p>
+
+                 <br>
+                 <p>© 2017-18, All Rights Reserved  <a class="grey-text text-lighten-3" href="https://www.ashutoshdwivedi.in/" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i>  www.ashutoshdwivedi.in</a></p>
+               </div>
+               <div class="col-md-6 col-xs-12 col-sm-12">
+                 <h4>Developed by Ashutosh</h4>
+                 <h5 class="white-text"> Meet me here</h5>
+                 <ul>
+                   <li><a class="grey-text text-lighten-3" href="https://www.ashutoshdwivedi.in" target="_blank"><i class="fa fa-globe" aria-hidden="true"></i>My website</a>
+                   </li>
+                   <li>
+                   <a class="grey-text text-lighten-3" href="https://www.linkedin.com/in/ashutosh1001/" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i>   Linkedin</a>
+               </li>
+               <li><a class="grey-text text-lighten-3" href="https://github.com/kindacoder" target="_blank"><i class="fa fa-github-square" aria-hidden="true"></i> Github</a>
+               </li>
+
+
+               <li><a class="grey-text text-lighten-3" href="https://www.facebook.com/ashutosh.dwivedid" target="_blank"><i class="fa fa-facebook-square" aria-hidden="true"></i>  Facebook</a>
+               </li>
+
+                 </ul>
+               </div>
+             </div>
+           </div>
+
+         </footer>
+
+
+  </div>
 
 
 
