--- a/views/shorten.ejs
+++ b/views/shorten.ejs
@@ -6,6 +6,10 @@
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
       <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
       <style>
+      .brand-logo:hover{
+        text-decoration: none;
+        color: black;
+      }
       #main{
         margin-top:10px;
         height:100% !important;
@@ -77,7 +81,7 @@
                         </button>
                       </div>
                       <div class="alert alert-success message" role="alert">
-                        Your shortened link is : <a href="#" class="alert-link "><%= shortenUrl %></a>
+                        Your shortened url is : <a href="#" class="alert-link "><%= shortenUrl %></a>
                       </div>
                     </div>
                 </form>
