the shortened link was not working did the changes

--- a/views/shorten.ejs
+++ b/views/shorten.ejs
@@ -81,7 +81,7 @@
                         </button>
                       </div>
                       <div class="alert alert-success message" role="alert">
-                        Your shortened url is : <a href="#" class="alert-link "><%= shortenUrl %></a>
+                        Your shortened url is : <a href="<%= shortenUrl %>" class="alert-link "><%= shortenUrl %></a>
                       </div>
                     </div>
                 </form>
